Project E_learning_AI {
  database_type: "MySQL"
  Note: "Mo hinh co so du lieu tong quat cua he thong E-Learning AI"
}

Table roles {
  id int [pk, increment]
  role_name varchar(50) [not null, unique]
}

Table users {
  id int [pk, increment]
  full_name varchar(100) [not null]
  email varchar(100) [not null, unique]
  password_hash varchar(255) [not null]
  role_id int [not null]
  status varchar(20) [not null]
  created_at datetime [not null]
}

Table courses {
  id int [pk, increment]
  title varchar(200) [not null]
  description text
  thumbnail_url varchar(500)
  price decimal(12,2) [not null]
  lecturer_id int [not null]
  status varchar(20) [not null]
  duration_days int
  created_at datetime [not null]
}

Table enrollments {
  id int [pk, increment]
  user_id int [not null]
  course_id int [not null]
  enrolled_at datetime [not null]
  access_status varchar(20) [not null]
  expires_at datetime
  is_preserved boolean [not null]

  indexes {
    (user_id, course_id) [unique]
  }
}

Table course_sections {
  id int [pk, increment]
  course_id int [not null]
  title varchar(200) [not null]
  description text
  section_order int [not null]
  is_preview boolean [not null]

  indexes {
    (course_id, section_order) [unique]
  }
}

Table lessons {
  id int [pk, increment]
  course_id int [not null]
  section_id int [not null]
  title varchar(200) [not null]
  content longtext
  video_url varchar(500)
  duration_seconds int
  lesson_order int [not null]
  status varchar(20) [not null]
}

Table materials {
  id int [pk, increment]
  lesson_id int [not null]
  file_name varchar(255) [not null]
  file_type varchar(50) [not null]
  material_type varchar(50) [not null]
  file_url varchar(500) [not null]
}

Table assignments {
  id int [pk, increment]
  course_id int [not null]
  section_id int [not null]
  title varchar(200) [not null]
  description text
  due_date datetime
  max_score decimal(5,2) [not null]
  assignment_type varchar(20) [not null]
  questions_json longtext
  auto_grade boolean [not null]
  status varchar(20) [not null]
}

Table submissions {
  id int [pk, increment]
  assignment_id int [not null]
  student_id int [not null]
  submitted_at datetime [not null]
  content longtext
  answers_json longtext
  status varchar(20) [not null]
}

Table results {
  id int [pk, increment]
  submission_id int [not null, unique]
  score decimal(5,2)
  feedback text
}

Table learning_progress {
  id int [pk, increment]
  student_id int [not null]
  course_id int [not null]
  completed_lessons int [not null]
  completed_assignments int [not null]
  completion_rate decimal(5,2) [not null]
  status varchar(20) [not null]

  indexes {
    (student_id, course_id) [unique]
  }
}

Table ai_data_sources {
  id int [pk, increment]
  course_id int [not null]
  uploaded_by int [not null]
  file_name varchar(255) [not null]
  file_type varchar(50) [not null]
  status varchar(20) [not null]
  approved_by int
  approved_at datetime
}

Table ai_conversations {
  id int [pk, increment]
  student_id int [not null]
  course_id int [not null]
  created_at datetime [not null]
}

Table ai_messages {
  id int [pk, increment]
  conversation_id int [not null]
  sender_type varchar(20) [not null]
  content longtext [not null]
  created_at datetime [not null]
}

Ref: users.role_id > roles.id

Ref: courses.lecturer_id > users.id
Ref: enrollments.user_id > users.id
Ref: enrollments.course_id > courses.id

Ref: course_sections.course_id > courses.id
Ref: lessons.course_id > courses.id
Ref: lessons.section_id > course_sections.id
Ref: materials.lesson_id > lessons.id

Ref: assignments.course_id > courses.id
Ref: assignments.section_id > course_sections.id
Ref: submissions.assignment_id > assignments.id
Ref: submissions.student_id > users.id
Ref: results.submission_id - submissions.id

Ref: learning_progress.student_id > users.id
Ref: learning_progress.course_id > courses.id

Ref: ai_data_sources.course_id > courses.id
Ref: ai_data_sources.uploaded_by > users.id
Ref: ai_data_sources.approved_by > users.id

Ref: ai_conversations.student_id > users.id
Ref: ai_conversations.course_id > courses.id
Ref: ai_messages.conversation_id > ai_conversations.id
